--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello there, awesome person!
+<html>
+  <body>
+    Turn on GitHub pages
+    Open a pull request
+    Build the HTML document structure
+  </body>
+</html>
