--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
+    <head>
+      <title>My awesome web page</title>
+    </head>  
     Turn on GitHub pages
     Open a pull request
     Build the HTML document structure
