--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
   <body>
     <head>
       <title>My awesome web page</title>
-    </head>  
+    </head>
+    <h1>This is a header</h1>
     Turn on GitHub pages
     Open a pull request
     Build the HTML document structure
+    Add a title tag
+    Merge my first pull request
   </body>
 </html>
