--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
       <title>My awesome web page</title>
     </head>
     <h1>This is a header</h1>
+    <img src="https://avatars.githubusercontent.com/u/90776545?v=4">
     Turn on GitHub pages
     Open a pull request
     Build the HTML document structure
     Add a title tag
     Merge my first pull request
+    Change my username to an h1 tag
   </body>
 </html>
