--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     </head>
     <h1>This is a header</h1>
     <img src="https://avatars.githubusercontent.com/u/90776545?v=4">
+    <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+    </ul>
     Turn on GitHub pages
     Open a pull request
     Build the HTML document structure
