--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <li>This</li>
     <li>Is an</li>
     <li>Unordered list</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </ul>
     Turn on GitHub pages
     Open a pull request
@@ -16,5 +17,8 @@
     Add a title tag
     Merge my first pull request
     Change my username to an h1 tag
+    Add an image
+    Merge my second pull request
+    Create a list
   </body>
 </html>
