--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <head>
       <title>My awesome web page</title>
+      <link rel="stylesheet" href="style.css">
     </head>
     <h1>This is a header</h1>
     <img src="https://avatars.githubusercontent.com/u/90776545?v=4">
@@ -12,13 +13,29 @@
     <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </ul>
     Turn on GitHub pages
+    <br />
     Open a pull request
+    <br />
     Build the HTML document structure
+    <br />
     Add a title tag
+    <br />
     Merge my first pull request
+    <br />
     Change my username to an h1 tag
+    <br />
     Add an image
+    <br />
     Merge my second pull request
+    <br />
     Create a list
+    <br />
+    Add links
+    <br />
+    Merge my third pull request
+    <br />
+    Make it beautiful
+    <br />
+    Merge the final pull request
   </body>
 </html>
